[package]
name = "tui48"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]

crossterm = "0.26"
boxy = "0.1"
rand = "0.8.5"
thiserror = "1.0"
anyhow = "1.0"

palette = "0.7"

[dev-dependencies]

rstest = "0.17.0"
rand = { version = "0.8.5", features = ["small_rng"] }
