[package]
name = "tui48"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]

# error handling
thiserror = "1.0"
anyhow = "1.0"

# logging & cli
log = "0.4"
fern = "0.6"
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0"

# drawing & colors
boxy = "0.1"
palette = "0.7"
textwrap = { version = "0.16", features = ["smawk"] }

# rendering
crossterm = "0.26"

# misc
rand = "0.8.5"

[dev-dependencies]

rstest = "0.17.0"
rand = { version = "0.8.5", features = ["small_rng"] }
env_logger = "*"
